--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1641,8 +1641,8 @@
     "#connecting to PostgreSQL\n",
     "conn = psycopg2.connect(\n",
     "    host = 'localhost',\n",
-    "    database = 'sql_project_p6',\n",
-    "    user = 'postgres',\n",
+    "    database = 'db_name',\n",
+    "    user = 'username',\n",
     "    password = 'password'\n",
     ")\n",
     "\n",
